--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,14 @@
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
+  %link{ href: 'https://fonts.googleapis.com/css?family=Lato:300,400,700', rel: 'stylesheet', type:'text/css'}
 %body
-  %nav
+  %header.main_header
     #logo
       %p Rails Forum
+    #buttons
+      = link_to 'New Post', new_post_path
+
   .wrapper
     %p.notice= notice
     %p.alert= alert
