--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,12 +6,14 @@
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
   %link{ href: 'https://fonts.googleapis.com/css?family=Lato:300,400,700', rel: 'stylesheet', type:'text/css'}
+  %link{ href: 'https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css',rel: 'stylesheet', type:'text/css'}
 %body
-  %header.main_header
-    #logo
-      %p Rails Forum
-    #buttons
-      = link_to 'New Post', new_post_path
+  %header.main_header.clearfix
+    .wrapper
+      #logo
+        %p Rails Forum
+      #buttons
+        = link_to 'New Post', new_post_path
 
   .wrapper
     %p.notice= notice
