more style and formatting

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 %head
-  %title Rails Forum
+  %title The Rails Forum
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
@@ -11,7 +11,7 @@
   %header.main_header.clearfix
     .wrapper
       #logo
-        %p Rails Forum
+        %p The Rails Forum
       #buttons
         = link_to 'New Post', new_post_path
 
