--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,15 +1,4 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
  *= require_tree .
  *= require_self
  */
@@ -42,6 +31,16 @@ body{
 
   #buttons{
     float: right;
+
+    a{
+      line-height: 60px;
+      background: #397CAC;
+      padding: .5em 1em;
+      border-radius: 0.2em;
+      color: white;
+      text-decoration: none;
+      font-weight: 100;
+    }
   }
 
 }
@@ -62,7 +61,6 @@ body{
 	.post {
 		margin: 1em 0;
 		padding: 1em 0;
-		border-bottom: 1px solid #D1d1d1;
 		.title {
 			margin: 0;
 			a {
