--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,4 +82,18 @@ body{
   background: white;
   padding: 2em 5%;
   border-radius: .5em;
+
+  h1{
+    font-weight: 100;
+    font-size: 2em;
+    color: #397CAC;
+    margin-top: 0;
+
+  }
+  p{
+    color: #B2BAC2;
+    font-size: 1em;
+    font-weight: 100;
+    line-height: 1.5;
+  }
 }
