--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,11 +21,13 @@ body{
 
   #logo{
     float:left;
-    p{
+    a{
       text-transform: uppercase;
       font-weight: 700;
       letter-spacing: -1px;
       font: 1.2rem;
+      text-decoration: none;
+      color: #397CAC;
     }
   }
 
