--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,6 +2,12 @@
   %h1= @post.title
   %p= @post.content
 
+  #comments
+    %h2= @post.comments.count
+    = render @post.comments
+
+    %h3 Reply to thread
+    = render 'comments/form'
 
   = link_to 'Edit', edit_post_path(@post)
   = link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }
